# meta-pytorch-hackathon

./: .gitignore  Dockerfile  README.md  deploy.py  inference.py  live_test.txt  openenv.yaml  pyproject.toml  requirements.txt  test_smoke.py
api/: server.py
baseline/: run_baseline.py
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
